[workspace]
resolver = "2"
members = [
    "json",
    "examples",
]

[workspace.package]
name = "my_parsing_lib"
version = "0.1.0"
edition = "2021"

[workspace.dependencies.json]
package = "json"
path = "./json"

[workspace.dependencies]
serde = "1"
serde_json = "1"
typify = "0.0.16"
quick-xml = { version="0.31.0", features=["serialize"]}
thiserror = "1.0.58"
