[workspace]
resolver = "2"
members = [
    "json",
    "examples",
]

[workspace.package]
name = "my_parsing_lib"
version = "0.1.0"
edition = "2021"

[workspace.dependencies.json]
package = "json"
path = "./json"

[workspace.dependencies]
serde = "1"
serde_json = "1"
typify = "0.0.16"
quick-xml = { version="0.31.0", features=["serialize"]}
thiserror = "1.0.58"

# Websocket
fastwebsockets = {version="0.7.1", features=["upgrade"]}
tokio = { version="1", features = ["full"]}
anyhow = "1.0.81"
hyper = "1.2.0"
hyper-util = { version="0.1", features = ["tokio"]}
http-body-util = "0.1.1"

tokio-tungstenite = "*"
futures-channel = "0.3.28"
futures-util = { version = "0.3.28", default-features = false, features = ["sink", "std"] }
url = "2.3.1"
