[package]
name = "examples"
version = "0.1.0"
authors = ["jaankaup <janne.kauppinen4321@.fi>"]
edition = "2021"

[lib]

[dependencies]

serde.workspace = true
serde_json.workspace = true
typify.workspace = true
json.workspace = true
quick-xml.workspace = true

[[example]]
name = "block_test"
path = "block_test/src/main.rs"
